# aumai-voicefirst

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPREHENSIVE_STRATEGIC_MASTERPLAN.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_voicefirst/: __init__.py  cli.py  core.py  models.py
tests/: conftest.py  test_cli.py  test_core.py
